[gd_scene load_steps=6 format=3 uid="uid://c0ey6w4i175wi"]

[ext_resource type="PackedScene" uid="uid://by8f7mfnathye" path="res://resources/entity/Entity.tscn" id="1_kgsmo"]
[ext_resource type="Script" uid="uid://yglwd7mxmf4i" path="res://resources/entity/projecttiles/Projecttile.gd" id="2_f2u4q"]
[ext_resource type="Texture2D" uid="uid://dyu03q0nq84mo" path="res://icon.svg" id="3_f2u4q"]
[ext_resource type="PackedScene" uid="uid://8clcbxdgnjh5" path="res://resources/overlap/Hitbox.tscn" id="4_2dttb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2dttb"]
radius = 2.82843
height = 11.3137

[node name="Projecttile" instance=ExtResource("1_kgsmo")]
collision_layer = 16
script = ExtResource("2_f2u4q")
hp_max = 10
SPEED = 780

[node name="Sprite2D" parent="." index="0"]
rotation = 1.5708
scale = Vector2(0.078125, 0.390625)
texture = ExtResource("3_f2u4q")

[node name="Hutrbox" parent="." index="3"]
collision_layer = 16

[node name="CollisionShape2D" parent="Hutrbox" index="0"]
position = Vector2(-5, -7)
rotation = 1.5708
debug_color = Color(1.73271e-06, 0.563693, 0.872439, 0.42)

[node name="Hitbox" parent="." index="4" instance=ExtResource("4_2dttb")]
collision_layer = 16
collision_mask = 7

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2dttb")
debug_color = Color(0.918592, 0.235025, 0.412713, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="5"]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="Hutrbox"]
[editable path="Hitbox"]
